# QuantTradingWebSocket

./: .gitmodules  CMakeLists.txt  Dockerfile  README.md  docker-compose.yml  test_server.py
.github/workflows/: ci.yml
examples/: CMakeLists.txt
examples/order_book_viewer/: viewer.c
examples/simple_market_maker/: market_maker.c
include/: common.h
include/client/: client_commands.h  client_handlers.h  client_helper.h  command_line.h  market_monitor.h  market_view.h  order_entry.h  trade_history.h  ws_client.h
include/common/: types.h
include/net/: .websocket_server.h.swp  buffer.h  frame.h  handshake.h  socket.h  websocket.h  websocket_frame.h  websocket_io.h  websocket_server.h
include/protocol/: json_protocol.h  message_types.h  protocol_constants.h  protocol_validation.h
include/server/: market_data.h  server_handlers.h  session_manager.h  ws_server.h
include/trading/: book_query_handler.h  order.h  order_book.h  order_handler.h
include/trading/engine/: matcher.h  order.h  order_book.h  trade.h
include/trading/protocol/: messages.h
include/trading/server/: trading_handlers.h
include/trading_engine/: avl_tree.h  order.h  order_book.h  trade.h  trade_broadcaster.h  trader.h
include/utils/: .json_utils.h.swp  heap.h  json_utils.h  logging.h  order_loader.h
scripts/: docker-run.sh
src/: CMakeLists.txt  main.c
src/client/: client_app.c  client_commands.c  client_helper.c  command_line.c  main.c  market_monitor.c  order_entry.c  trade_history.c  ws_client.c
src/common/: types.c
src/net/: .websocket_server.c.swp  buffer.c  frame.c  handshake.c  socket.c  websocket.c  websocket_frame.c  websocket_io.c  websocket_server.c
src/protocol/: json_protocol.c  protocol_constants.c  protocol_validation.c
src/server/: market_data.c  server_app.c  server_handlers.c  session_manager.c  ws_server.c
src/trading/: book_query_handler.c  order.c  order_book.c  order_handler.c
src/trading/engine/: matcher.c  order.c  order_book.c
src/trading/protocol/: messages.c
src/trading/server/: trading_handlers.c
src/trading_engine/: avl_tree.c  order.c  order_book.c  trade.c  trade_broadcaster.c  trader.c
src/utils/: heap.c  json_utils.c  logging.c  order_loader.c
tests/: CMakeLists.txt  test_order.c  test_order_book.c  test_websocket.c
tests/data/: test_orders.csv  test_orders.txt
tests/net/: test_frame.c  test_handshake.c  test_socket.c
tests/trading/engine/: test_order.c  test_order_book.c
tests/trading_engine/: test_trading_engine.c
tests/utils/: test_order_loader.c
